# vanila-recsys

./: README.md
recsys/: .gitignore  pyproject.toml
recsys/recsys/: EDA_Cleansing.ipynb  main.py  mvp.ipynb  recommenders.py  utils.py
recsys/recsys/.ipynb_checkpoints/: EDA_Cleansing-checkpoint.ipynb  constants-checkpoint.py  mvp-checkpoint.ipynb
recsys/tests/: test_recsys.py
