[tool.poetry]
name = "recsys"
version = "0.1.0"
description = ""
authors = ["Goncharov Gleb"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
argparse = "^1.4.0"

[tool.poetry.scripts]
main = "recsys.main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
